--- a/HistoryBrowser/HistoryBrowser.vcproj
+++ b/HistoryBrowser/HistoryBrowser.vcproj
@@ -199,6 +199,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\SkypeChatMainFrame.h"
 				>
 			</File>
@@ -208,6 +212,14 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\SkypeChatMainFrame.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\star.ico"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
